# test-capitalize

./: pyproject.toml
tests/: test_test_capitalize.py
