[tool.poetry]
name = "test_capitalize"
version = "0.1.0"
description = ""
authors = ["Dddarknight <9801677@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
